blog-k8s/blog-elasticsearch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-elasticsearch
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog-elasticsearch
  template:
    metadata:
      labels:
        app: blog-elasticsearch
    spec:
      securityContext:
        fsGroup: 1000
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: blog-elasticsearch-pvc
      containers:
        - name: elasticsearch
          image: docker.elastic.co/elasticsearch/elasticsearch:7.9.3
          ports:
            - containerPort: 9200
              name: http
              protocol: TCP
            - containerPort: 9300
              name: transport
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /usr/share/elasticsearch/data/
          resources:
            requests:
              memory: '512Mi'
              cpu: '500m'
            limits:
              memory: '2Gi'
              cpu: '1'
---
apiVersion: v1
kind: Service
metadata:
  name: blog-elasticsearch
  namespace: app
spec:
  selector:
    app: blog-elasticsearch
  ports:
    - port: 9200
      name: http
      protocol: TCP
    - port: 9300
      name: transport
      protocol: TCP
