blog-k8s/blog-service.yml
apiVersion: v1
kind: Service
metadata:
  name: blog
  namespace: app
  labels:
    app: blog
spec:
  selector:
    app: blog
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
