blog-k8s/blog-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog
  namespace: app
spec:
  rules:
    - host: blog.app.192.168.99.100.nip.io
      http:
        paths:
          - path: /
            backend:
              serviceName: blog
              servicePort: 8080
